CSS::Sass (0.1.0)

  * Rename module.

 -- David Caldwell <david@porkrind.org>  Wed, 29 May 2013 23:59:30 -0700

Text::Sass::XS (0.1.0)

  * Initial release.

 -- David Caldwell <david@porkrind.org>  Wed, 29 May 2013 19:23:13 -0700