@@ -2,6 +2,7 @@ use 5.008;
 use strict;
 use warnings FATAL => 'all';
 use Module::Build;
+use Config;
 
 if (-d ".git") { # Are we in our development tree? If so, create MANIFEST.
     my ($dir, $manifest);
@@ -29,8 +30,10 @@ my $builder = Module::Build->new(
     },
     add_to_cleanup     => [ 'CSS-Sass-*' ],
     create_makefile_pl => 'traditional',
-    # clang has a bunch of asinine warnings on by default:
-    extra_compiler_flags => '-Wno-parentheses -Wno-tautological-compare -Wno-unused-value',
+    $Config{cc} eq 'clang' ? (
+        # clang has a bunch of asinine warnings on by default:
+        extra_compiler_flags => '-Wno-parentheses -Wno-tautological-compare -Wno-unused-value',
+    ) : (),
     extra_linker_flags   => '',
     c_source     => 'libsass',
 );
