@@ -7,7 +7,8 @@ build_requires:
   Test::More: 0
 configure_requires:
   Module::Build: 0
-generated_by: 'Module::Build version 0.3603'
+dynamic_config: 1
+generated_by: 'Module::Build version 0.4005, CPAN::Meta::Converter version 2.130880'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -16,7 +17,7 @@ name: CSS-Sass
 provides:
   CSS::Sass:
     file: lib/CSS/Sass.pm
-    version: v0.1.0
+    version: v0.2.0
 resources:
   license: http://dev.perl.org/licenses/
-version: v0.1.0
+version: v0.2.0
